@@ -1,3 +1,8 @@
+2010-07-07  Colin Watson  <cjwatson@ubuntu.com>
+
+	* term/gfxterm.c (grub_gfxterm_background_image_cmd): Fix
+	indentation.
+
 2010-07-06  Colin Watson  <cjwatson@ubuntu.com>
 
 	* conf/common.rmk (grub_probe_SOURCES): Add disk/raid5_recover.c
